<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sync Verifier</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="enter_server_hint">Server url (https)</string>
    <string name="enter_server_url">Enter Server Url</string>
    <string name="save_a_server_url">Save a Server Url</string>
    <string name="save_a_user">Save a User</string>
    <string name="server_url">Server Url:</string>

    <string name="choose_account">Choose Account</string>

    <string name="use_anonymous_user">Use Anonymous User</string>
    <string name="user">User</string>

    <string name="authorize_account">Authorize Account</string>

    <string name="get_table_list">Get Table List</string>

    <string name="save_settings">Save Settings</string>

    <string name="anonymous_user">Anonymous User</string>

    <string name="received_io_exception">Received IO Exception: %s</string>

    <string name="getting_token">Getting Token</string>

    <string name="msg_on_operation_canceled_exception">Got OnOperationCanceledException</string>
    <string name="msg_on_authenticator_exception">Got AuthenticatorException</string>
    <string name="msg_on_io_exception">Got IOException: %s</string>
    <string name="retrived_auth_token_is_null">Retrieved auth token is null.</string>

    <string name="retrieved_auth_token_successfully">Retrieved auth token successfully.</string>

    <string name="not_authenticated">Not Authenticated</string>

    <string name="auth_token">Auth Token:</string>

    <string name="querying_url">Querying %s</string>

    <string name="target_url">Target Url:</string>

    <string name="status_code">Status Code:</string>

    <string name="response_body">Response Body:</string>

    <string name="message_ioexception_parsing_entity">IOException parsing entity: %s</string>

    <string name="exception_class">Exception Class:</string>
    <string name="exception_cause">Cause:</string>
    <string name="exception_message">Message:</string>
    <string name="exception_stack_trace">Stack Trace:</string>
    <string name="exception_to_string">toString():</string>

    <string name="received_an_exception">Received an Exception</string>

    <string name="headers">Headers</string>
    <string name="no_headers">No Headers</string>

    <string name="na">N/A</string>

</resources>
