<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/received_an_exception"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/target_url" />

        <TextView
            android:id="@+id/fragment_exception_summary_target_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:focusable="true"
            android:text="@string/target_url"
            android:textAppearance="?android:textAppearanceMedium"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@android:color/darker_gray"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exception_class"/>

        <TextView
            android:id="@+id/fragment_exception_summary_exception_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:focusable="true"
            android:text="@string/exception_class"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/exception_message"/>

        <TextView
            android:id="@+id/fragment_exception_summary_exception_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:focusable="true"
            android:text="@string/exception_message"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/exception_cause"/>

        <TextView
            android:id="@+id/fragment_exception_summary_exception_cause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:focusable="true"
            android:text="@string/exception_cause"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/exception_stack_trace"/>

        <TextView
            android:id="@+id/fragment_exception_summary_exception_stack_trace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:focusable="true"
            android:text="@string/exception_stack_trace"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/exception_to_string"/>

        <TextView
            android:id="@+id/fragment_exception_summary_exception_to_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:focusable="true"
            android:text="@string/exception_to_string"
            android:textAppearance="?android:textAppearanceMedium"/>




    </LinearLayout>

</ScrollView>